# ma495-group-project

./: .gitignore  .gitmodules  CMakeLists.txt  download.py  main.cpp  parameters.json  requirements.txt
heatmap/: index.html  package-lock.json  package.json
heatmap/src/: globals.d.ts  main.ts
